v0.x.x - ?
New Features
------------

Bugfixes
--------

v0.6.0 - March 24, 2014
  - removed tiles.ScrollingManager / tiles.ScrollableLayer, they were deprecated
    compatibility shims of same classes in cocos.layer
  - added support for gzip compression in .tmx maps, thanks fred@reichbier.de
    for initial patch, #185
  - fix Sprite.get_rect() forgetting about .scale_x and .scale_y 
  - from r1282 cocos needs python 2.6 or 2.7, and the 'six' package
  ===========================================================================
  - r1281 is the last revision completely compatible with python 2.4 and 2.5
  - EntryMenuItem, callback called before updating the view
  - documentation subsystem changed to sphinx, #206, ended r1278
  - fix particles scaling, #204, thanks hello3171@gmail.com for bugreport
  - module shaders slightly upgraded, added test_shader_examples.py
  - fix mouse hit in HexMap, #203
  - fix some parts of a HexMap not rendering - #201 , #202
  - tilemaps, added persistence of cell color / opacity from / to .xml files - #200
  - fix cells in tilemap forgot color / opacity when out of view - #199
  - fixes cracks in the render of .tmx maps (thanks 2slow2handle@gmail.com for analysis and patch) - #198
  - allow ImageMenuItem to receive a pyglet image as first parameter - #195
  - CocosNode, added scale_x , scale_y properties to uneven resize a node - #165
        total scale along x axis is _scale_x * _scale
		total scale along y axis is _scale_y * _scale
	Don't change scale_x , scale_y from the default 1.0 in ScrollingManager or ScrollableLayer because scrolling and coordinate changes will fail.
	(thanks Gerardo Marset for discussion and patch)
  - MapLayer, added tile properties to cell debug view
  - fix RectMap.get_in_region returns too many cells (thanks Gerardo Marset for 
    bug report, analysis and patch) - #191
  - fix Mac crash due to non matching SDL dlls when not using SDL audio (patch by  Juan J. Martínez, thanks) #190
